6904 collation code fixes from dragonfly bsd